feat: Frontend WIP
